--- a/index.html
+++ b/index.html
@@ -49,50 +49,54 @@
                     <span class="code">/&gt;</span>
                 </p>
             </a>
-            <a href="https://codepen.io/freeCodeCamp/full/qRZeGZ" target="_blank" class="project project-tile">
-                <img class="project-image"
-                    src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png"
+            <a href="https://marylu6.github.io/Article/" target="_blank" class="project project-tile">
+                <img class="project-image" src="images/article.PNG"
                     alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
-                    Random Quote Machine
+                    News Article
                     <span class="code">/&gt;</span>
                 </p>
             </a>
-            <a href="https://codepen.io/freeCodeCamp/full/wgGVVX" target="_blank" class="project project-tile">
+            <a href="" target="_blank" class="project project-tile">
                 <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png"
                     alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
-                    JavaScript Calculator
+                    Either the comic or store
                     <span class="code">/&gt;</span>
                 </p>
             </a>
-            <a href="https://codepen.io/freeCodeCamp/full/mVEJag" target="_blank" class="project project-tile">
-                <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg"
+</div>
+<h2  class="projects-section-header">These are the assigments i work on front-end mentor</h2>
+            <div class="projects-grid">
+
+
+            <a href="https://marylu6.github.io/Profile-card-component/" target="_blank" class="project project-tile">
+                <img class="project-image" src="images/profile.PNG"
                     alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
-                    Map Data Across the Globe
+                    Profile card component
                     <span class="code">/&gt;</span>
                 </p>
+                
             </a>
-            <a href="https://codepen.io/freeCodeCamp/full/wGqEga" target="_blank" class="project project-tile">
-                <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/wiki.png"
+            <a href="https://marylu6.github.io/FAQ-accordion-card/" target="_blank" class="project project-tile">
+                <img class="project-image" src="images/FAQ card.PNG"
                     alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
-                    Wikipedia Viewer
+                   FAQ accordion card
                     <span class="code">/&gt;</span>
                 </p>
             </a>
 
-            <a href="https://codepen.io/freeCodeCamp/full/KzXQgy" target="_blank" class="project project-tile">
-                <img class="project-image"
-                    src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tic-tac-toe.png" alt="project">
+            <a href="https://marylu6.github.io/QR-code-compnent/" target="_blank" class="project project-tile">
+                <img class="project-image" src="images/scan QR code.PNG" alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
-                    Tic Tac Toe Game3
+                    QR scan
                     <span class="code">/&gt;</span>
                 </p>
             </a>
@@ -186,9 +190,6 @@
 
             <button onclick="myFunction()" id="btn-email" class="btn contact-details"><i class="fas fa-at"></i>Send an
                 email</button>
-
-
-
 
 
         </div>
