--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
                     <span class="code">/&gt;</span>
                 </p>
             </a>
-            <a href="" target="_blank" class="project project-tile">
-                <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png"
+            <a href="https://marylu6.github.io/beauty-supply-store/" target="_blank" class="project project-tile">
+                <img class="project-image" src="images/store4.PNG"
                     alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
-                    Either the comic or store
+                    Beauty Supply Store
                     <span class="code">/&gt;</span>
                 </p>
             </a>
@@ -190,6 +190,9 @@
 
             <button onclick="myFunction()" id="btn-email" class="btn contact-details"><i class="fas fa-at"></i>Send an
                 email</button>
+
+
+
 
 
         </div>
