Update index.html store4 image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <style type="text/css" id="operaUserStyle"></style>
     <style type="text/css"></style>
 
-    <title>Ashley Suarez Front-End Portfolio</title>
+    <title>Ashley Suarez Front-End Portfolio 2024</title>
 </head>
 
 <body>
